# kvs-bridge

./: .gitignore  .gitmodules  README.md  build-gst-plugin.sh  export.sh  kvs-bridge-client.py  kvs-bridge-server-appsrc.py  kvs-bridge-server.py  kvs-bridge.py  static-mjpeg.sh
.github/workflows/: main.yml
esp32/tcp_client/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32/tcp_client/.github/workflows/: action.yml  build.yml
esp32/tcp_client/actions/workflows/: action.yml  build.yml
esp32/tcp_client/main/: CMakeLists.txt  kbridge_client.c  mjpeg_producer.c  static_frames.c  tcp_client_main.c
esp32/uvc/: README.md  sdkconfig  sdkconfig.old
esp32/uvc/actions/workflows/: action.yml
esp32/uvc/main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  kvs_bridge.c  kvs_bridge.h  main.c
